2000-07-04  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* dcrt0.cc (dll_crt0_1): Eliminate SetFileApisToOEM and CharToOem.
	* (dummy_autoload): Add functions used in fhandler_console.
	* fhandler_console.cc (fhandler_console::read): Use ENCHANCED_KEY flag
	to distinguish extended keys.  Translate an input character from the
	OEM code page to the ANSI code page.
	* (fhandler_console::write_normal): Translate output characters from
	the ANSI code page to the OEM code page.
	* syscalls.cc (_link): Use MultiByteToWideChar instead of OemToCharW.

Mon Jul  3 16:09:16 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (stack_info::walk): Use method to find offset.
	(handle_exceptions): Be more assertive in finding ebp for use under
	W2K.  Create a dummy stack frame for cases where program is dying and a
	stack dump is being output.
	(sig_handle): Fill out a GetThreadContext for use with a user-generated
	"core dump".

Mon Jul  3 10:53:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/socket.h: Remove SOCK_PACKET define since it's
	not supported by Windows sockets.

Sun Jul  2 21:50:48 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (user32_init): Add primitive guard against concurrent
	attempts to call this function.  Also add temporary debugging code to
	display a message if the function is called multiple times.
	(api32_init): Ditto.

Sun Jul  2 10:39:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.h: Define MAX_SID_LEN and new MAX_HOST_NAME.
	* fork.cc (fork): Use above defines instead of numerical constants.
	* shared.cc (sec_user): Ditto.
	* shared.h (class pinfo): Ditto.
	* syscall.cc (seteuid): Ditto.
	* spawn.cc (_spawnve): Ditto. Eliminate conditional.
	(spawn_guts): Set child->uid = USHRT_MAX when user context will be
	changed in child process.
	* uinfo.cc (uinfo_init): Check for myself->uid instead of myself->psid
	to avoid reloading of /etc/passwd on process startup if ntsec is off.