@@ -1,3 +1,11 @@
+Mon Jul  4 18:57:00 2000  Corinna Vinschen  <corinna@vinschen.de>
+
+	* poll.cc: New file. Implement `poll' system call.
+	* include/poll.h: Ditto.
+	* include/sys/poll.h: Ditto.
+	* Makefile.in: Add poll.o as dependency.
+        * cygwin.din: Add poll and _poll symbols.
+
 2000-07-04  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>
 
 	* dcrt0.cc (dll_crt0_1): Eliminate SetFileApisToOEM and CharToOem.
